--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
-  "scripts": {
-  },
+  "scripts": {},
   "engines": {
     "node": "16"
   },
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
-    "node-cron": "^3.0.2"
-  },
-  "devDependencies": {
+    "node-cron": "^3.0.2",
+    "string-similarity": "^4.0.4"
   },
   "private": true
 }
