--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "firebase-admin": "^10.0.2",
     "node-cron": "^3.0.2",
+    "openai": "^4.3.0",
     "string-similarity": "^4.0.4"
   },
   "private": true
