--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "firebase-admin": "^10.0.2",
     "node-cron": "^3.0.2",
     "openai": "^4.3.0",
