--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "firebase-admin": "^10.0.2",
+    "natural": "^6.10.4",
     "node-cron": "^3.0.2",
     "openai": "^4.3.0",
     "string-similarity": "^4.0.4"
