--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node-cron": "^3.0.2",
     "openai": "^4.3.0",
     "string-similarity": "^4.0.4",
-    "axios": "1.6.5"
+    "axios": "^1.6.5"
   },
   "private": true
 }
